--- a/index.html
+++ b/index.html
@@ -40,32 +40,35 @@
 
 <body>
     <div>
-        <img id="A_H" class="TC" src=./img/A-H_TC.jpg style="width:100px;height:80px;">
+        <img id="A_H" class="TC" src="./img/A-H_TC.jpg" style="width:100px;height:80px;">
 
-        <img id="AMK" class="TC" src=./img/AMK_TC.jpg style="width:100px;height:80px;">
+        <img id="AMK" class="TC" src="./img/AMK_TC.jpg" style="width:100px;height:80px;">
 
-        <img id="BT" class="TC" src=./img/BH-TP_TC.jpg style="width:100px;height:80px;">
+        <img id="BT" class="TC" src="./img/BH-TP_TC.jpg" style="width:100px;height:80px;">
 
-        <img id="CCK" class="TC" src=./img/CCK_TC.jpg style="width:100px;height:80px;">
+        <img id="CCK" class="TC" src="./img/CCK_TC.jpg" style="width:100px;height:80px;">
 
-        <img id="EC_FS" class="TC" src=./img/EC-FS_TC.png style="width:100px;height:80px;">
+        <img id="EC_FS" class="TC" src="./img/EC-FS_TC.png" style="width:100px;height:80px;">
 
-        <img id="HL_BP" class="TC" src=./img/HL-BP.jpg style="width:100px;height:80px;">
+        <img id="HL_BP" class="TC" src="./img/HL-BP.jpg" style="width:100px;height:80px;">
 
-        <img id="JB" class="TC" src=./img/JB_TC.png style="width:100px;height:80px;">
+        <img id="JB" class="TC" src="./img/JB_TC.png" style="width:100px;height:80px;">
 
-        <img id="JR" class="TC" src=./img/JR-CT_TC.JPG style="width:90px;height:80px;">
-        <img id="MP" class="TC" src=./img/MP_TC.png style="width:100px;height:80px;">
+        <img id="JR" class="TC" src="./img/JR-CT_TC.JPG" style="width:90px;height:80px;">
+        
+        <img id="MP" class="TC" src="./img/MP_TC.png" style="width:100px;height:80px;">
 
-        <img id="MS" class="TC" src=./img/MS-YT_TC.png style="width:100px;height:80px;">
+        <img id="MS" class="TC" src="./img/MS-YT_TC.png" style="width:100px;height:80px;">
 
-        <img id="NS" class="TC" src=./img/NS_TC.png style="width:100px;height:80px;">
-        <img id="PP" class="TC" src=./img/PR-PG_TC.png  style="width:100px;height:80px;">
-        <img id="SW" class="TC" src=./img/SW_TC.jpg style="width:100px;height:80px;">
+        <img id="NS" class="TC" src="./img/NS_TC.png" style="width:100px;height:80px;">
 
-        <img id="TP" class="TC" src=./img/TP_TC.jpg style="width:100px;height:80px;">
-        <img id="TJP" class="TC" src=./img/TJP_TC.jpg style="width:100px;height:80px;">
-        <img id="WC" class="TC" src=./img/WC_TC.jpg style="width:150px;height:80px;">
+        <img id="PP" class="TC" src="./img/PR-PG_TC.png"  style="width:100px;height:80px;">
+
+        <img id="SW" class="TC" src="./img/SW_TC.jpg" style="width:100px;height:80px;">
+
+        <img id="TP" class="TC" src="./img/TP_TC.jpg" style="width:100px;height:80px;">
+        <img id="TJP" class="TC" src="./img/TJP_TC.jpg" style="width:100px;height:80px;">
+        <img id="WC" class="TC" src="./img/WC_TC.jpg" style="width:150px;height:80px;">
 
     </div>
     <div id="map"></div>
