--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <img id="JB" class="TC" src="./img/JB_TC.png" style="width:100px;height:80px;">
 
-        <img id="JR" class="TC" src="./img/JR-CT_TC.JPG" style="width:90px;height:80px;">
+        <img id="JR" class="TC" src="./img/JR-CT_TC.jpg" style="width:90px;height:80px;">
         
         <img id="MP" class="TC" src="./img/MP_TC.png" style="width:100px;height:80px;">
 
