--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="bt_gallery_1.css">
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="./js/jquery-3.4.1.min.js"></script>
+    <script src="./js/app.js"></script>
     <script src="./service-worker.js"></script>
-    <title>Document</title>
+    <title>SG Town Concil Map</title>
 
     <style>
         /* Always set the map height explicitly to define the size of the div
